--- a/package.json
+++ b/package.json
@@ -2,21 +2,38 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ayhiel.github.io/id-card-maker",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@imgly/background-removal": "^1.6.0",
+    "@tensorflow-models/body-pix": "^2.2.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-image-crop": "^11.0.10",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^3.4.3"
   }
 }
