--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.3",
     "react-image-crop": "^11.0.10",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.0",
     "web-vitals": "^2.1.4"
